--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -47,6 +47,12 @@ Finalmente al saber de qué instrucción se trata la CPU ejecuta la instrucción
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Instrucciones de 2 operandos}
+El formato de instruccion de dos operandos es el siguiente:
+
+  CodOp   +  Modo destino +  Modo origen +  Destino  +   Origen
+(4 bits)       (6 bits)        (6 bits)    (16 bits)    (16 bits)  
+
+Donde el operando destino no puede ser un modo de direccionamiento Inmediato, ya que en la direccion de memoria o registro que describa dicho operando es donde se guardará el resultado de la operación.
 
 \begin{enumerate}
 \item \textbf{MUL destino, origen}
@@ -80,14 +86,45 @@ Esta instrucción describe la comparación bit a bit entre los datos de los dos 
 \item \textbf{OR destino, origen}
 Código de operación: 0101
 Esta instrucción describe la operación logica "o" bit a bit entre los datos de los dos operandos. El resultado de la ejecución de esta operación es guardado en el operando destino.
-
+\end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Instrucciones de 1 operando origen}
+
+El formato de instruccion de un operando origen es el siguiente:
+
+  CodOp   +   relleno   +  Modo origen +   Origen
+(4 bits)      (000000)        (6 bits)    (16 bits)
+
+\begin{enumerate}
+\item \textbf{CALL}
+Código de operación: 1011
+El efecto del CALL es guardar la direccion de memoria en la celda de la dirección que se encuentra guardadad en el SP (Stack pointer) aumentar el SP y guardar en el PC (Program Counter) el dato que se encuentra guardado en el operando origen ya que describe el llamado a una subrutina que comienza en la celda de memoria cuya direccion esta guardada en el operando origen.
+
+\item \textbf{JMP}
+Código de operación: 0110
+El efecto del JMP es cambiar el PC (Program Counter) por el dato que esta guardado en el operando origen ya que esta operación describe el salto a otra parte de la memoria para continuar con la ejecución del programa.
+
+\end{enumerate}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Instrucciones de 1 operando destino}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Instrucciones sin operandos}
+
+El formato de instruccion sin operandos es el siguiente:
+
+ CodOp     +    relleno 
+(4 bits)     (000000000000)
+
+
+\begin{enumerate}
+\item \textbf{RET}
+Código de operación: 0110
+El efecto del ret es cambiar el pc por el dato que esta guardado en la celda de memoria que se encuentra en el SP (Stack pointer) y decrementar el SP ya que describe la finalización de la ejecución de una subrutina y la ejecución del resto del programa.
+\end{enumerate}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Instrucciones de salto condicional}
 
