--- a/src/main/resources/informe-LaTex/Qsim.sty
+++ b/src/main/resources/informe-LaTex/Qsim.sty
@@ -18,6 +18,7 @@
 \newcommand{\qsim}{QSim}
 
 \newcommand{\IR}{registro IR}
+\newcommand{\UC}{Unidad de Control}
 
 
 \newcommand{\ojo}[2]{{\large\verde{#1}}\footnote{#2}}
