--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -4,13 +4,19 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conceptos importantes}
 
-\subsection{Enfoque de Von Newmann}
-Este enfoque generaliza la organización de las computadoras distinguiendo en tres partes interconectadas: La CPU (con la unidad aritmético-lógica o ALU y la unidad de control) la memoria, modulo de entrada/salida (con un bus de sistema que proporciona un medio de transporte de los datos entre las distintas partes). Con este modelo surge el concepto de programa almacenado contiene un conjunto de instrucciones que podían ser almacenadas en memoria, o sea, un programa que detalla la computación del mismo. El programa se codifica de cierta manera para que pueda ser almacenadoy posteriormente ejecutado quizas muchas veces. Ademas puede ser 'recordado' de esta manera se separa en el mecanismo de ejecución el hadware de la logica de computo o instrucciones (software).
-Este tipo del diseño que permite un programa almacenado también da la posibilidad de que los programas sean modificados ellos mismos durante su ejecución, por ejemplo un programa podría modificar o incrementar las direcciones de memoria que tenga en algunas instrucciones y luego volver a ejecutar dichas instrucciones con fin de procesar celdas diferentes de memoria. Esta caracteistica es potente y a la vez peligrosa pues las modificaciones en los programas podía ser algo perjudicial, por accidente o por diseño.
+\subsection{Enfoque de Von Neumann}
+\ojo{}{(Un poco de historia) El matemático John Von Neumann propone en el año...}Este enfoque generaliza la organización de las computadoras distinguiendo en tres partes interconectadas: La CPU (con la unidad aritmético-lógica o ALU y la unidad de control) la memoria, y un módulo de entrada/salida. \ojo{(con un bus de sistema que proporciona un medio de transporte de los datos entre las distintas partes)}{La interconexión es llevada a cabo por un un bus de sistema que proporciona un medio de transporte de los datos entre las distintas partes}. \\
+
+Con la propuesta de este modelo Von Neumann incorpora el concepto de \textbf{programa almacenado}\ojo{ contiene un conjunto de instrucciones que podían ser almacenadas en memoria, o sea, un programa que detalla la computación del mismo}{no entiendo esta frase. la puse yo?}. \ojo{El programa se codifica de cierta manera para que pueda ser almacenado y posteriormente ejecutado quizás múltiples veces. Ademas puede ser 'recordado' de esta manera se separa en el mecanismo de ejecución el hadware de la logica de computo o instrucciones (software).}
+{Con esta idea, el programa se codifica de cierta manera para que pueda ser almacenado en memoria principal y posteriormente ejecutado quizás múltiples veces. De esta manera, la lógica del programa puede ser ''recordada'' y el programa toma un valor mayor, a diferencia de lo que ocurría hasta entonces, donde el programa se reflejaba en un conjunto de configuraciones de cables aplicadas a los equipos. Esto implica una separación entre el mecanismo de ejecución (el hadware) y la lógica de computo o instrucciones (el software).}
+
+Este tipo del diseño que permite un programa almacenado también da la posibilidad de que \ojo{los programas sean modificados ellos mismos durante su ejecución}{la ejecución de las instrucciones modifique el código máquina del mismo u otro programa}. Por ejemplo un programa podría modificar o incrementar \ojo{}{las referencias a} las direcciones de memoria que tenga en algunas instrucciones y luego volver a ejecutar dichas instrucciones con el fin de procesar celdas diferentes de memoria cada vez. Esta característica es potente \ojo{y a la vez  peligrosa}{pero presenta un alto riesgo} pues las modificaciones en los programas podía ser algo perjudicial, por accidente o por diseño.
 
 \subsection{Organización de la computadora}
 
-La CPU (Unidad Central de Procesamiento del inglés: Central Processing Unit), es el componente principal y el encargado ejecutar los programas y procesar los datos. La CPU contiene otros componentes de importancia tales como la Unidad de Control, PC, IR, Registros y la ALU.
+La CPU (Unidad Central de Procesamiento del inglés: Central Processing Unit), es el componente principal y el encargado ejecutar los programas y procesar los datos. La CPU contiene otros componentes de importancia tales como la \textbf{Unidad de Control}, \ojo{PC}{el contador de programa (PC - \textit{Program Counter})}, \ojo{IR}{el registro de instrucción (IR - \textit{Instruction Register})}, \ojo{Registros}{ otros registros de uso específico y general} y la \ojo{ALU}{Unidad Aritmético-Lógica (ALU)}.\\
+
+La \UC\ dirige el ciclo de ejecución de cada instrucción, pidiendo la lectura de celdas de memoria donde esta alojada la instruccion, decodificando la instruccion y ejecutandola luego en colaboración con los otros componenetes del sistema: si es una operación lógica o aritmetica le ordena a la ALU su ejecución, si es de movimiento de datos colabora con el dispositivo de Entrada/Salida.
 
 PC: El contador de programa (en inglés Program Counter o PC) es un registro que indica la posición de memoria donde estará la siguiente instrucción que debe ejecutarse. Este registro se incrementa luego de cada ciclo de instrucción.
 
@@ -19,8 +25,6 @@ IR: Este registro contiene la instrucción actual una vez que la misma es leída
 Registros: son elementos de una memoria de alta velocidad y poca capacidad que permite guardar y acceder a valores generalmente muy usados, por ejemplo, operandos en operaciones matemáticas. Hay diferentes tipos de registros, algunos pueden guardar tanto datos como direcciones de memoria.
 
 ALU: es la unidad aritmético lógica, recibe su nombre de las siglas en inglés de arithmetic logic unit. La ALU es un circuito digital que lleva a cabo operaciones aritméticas (suma, resta, multiplicación, división) y las operaciones lógicas (Negacion, Y, O, O exclusivo), entre dos cadenas binarias que son interpretadas como números. 
-
-Unidad de control: La UC dirige el ciclo de ejecución de cada instrucción, pidiendo la lectura de celdas de memoria donde esta alojada la instruccion, decodificando la instruccion y ejecutandola luego en colaboración con los otros componenetes del sistema: si es una operación lógica o aritmetica le ordena a la ALU su ejecución, si es de movimiento de datos colabora con el dispositivo de Entrada/Salida.
 
 Memoria: es un conjunto de celdas numeradas. La numeración de cada celda la identifica inequívocamente por lo cual a esta numeración se le llama direccion. En cada celda de la memoria se pueden almacenar datos o instrucciones en forma de cadenas binarias. La información puede leerse y modificarse. En la memoria es donde se alojan los programas que luego serán ejecutados.
 
