--- a/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.tex
+++ b/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,a4paper,draft]{book}
+\documentclass[10pt,a4paper]{article}
 \usepackage{Qsim}
 
 \author{\susi \and \tati}
@@ -8,9 +8,11 @@
 \pagestyle	{fancy}
 \begin{document}
 \maketitle
+
+\newpage
 \tableofcontents
 
-
+\newpage
 \input{introduccion}
 \input{contexto}
 \input{simulador}
