--- a/src/main/resources/informe-LaTex/simulador.tex
+++ b/src/main/resources/informe-LaTex/simulador.tex
@@ -1,4 +1,4 @@
-\chapter{Simulador \qsim}
+\part{Simulador \qsim}
 
 
 \section{Funcionalidad del simulador}
@@ -67,9 +67,17 @@ El execute ejecuta los efectos de la instrucción y muestra en pantalla los camb
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 \section{Implementación}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Tecnología utilizada}
+\subsection{Tecnología utilizada (tati)}
+
+\ojo{poner chamuyo de porque se eligio scala}{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{ (arq OO)}
+
+Como se observa en la figura \ref{ALU}
+
+\graf{ALU}{Diagrama de clase de la \ALU}
+
+%[width=0.7\textwidth]
 
 
 
