--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -1,6 +1,6 @@
-\chapter{Contexto}
+\part{Contexto}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Sobre la materia \orga}
+\section{Sobre la materia \orga (susi)}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conceptos importantes}
 
@@ -14,21 +14,21 @@ Este tipo del diseño que permite un programa almacenado también da la posibili
 
 \subsection{Organización de la computadora}
 
-La CPU (Unidad Central de Procesamiento del inglés: Central Processing Unit), es el componente principal y el encargado ejecutar los programas y procesar los datos. La CPU contiene otros componentes de importancia tales como la \textbf{Unidad de Control}, \ojo{PC}{el contador de programa (PC - \textit{Program Counter})}, \ojo{IR}{el registro de instrucción (IR - \textit{Instruction Register})}, \ojo{Registros}{ otros registros de uso específico y general} y la \ojo{ALU}{Unidad Aritmético-Lógica (ALU)}.\\
+La CPU (Unidad Central de Procesamiento del inglés: Central Processing Unit), es el componente principal y el encargado ejecutar los programas y procesar los datos. La CPU contiene otros componentes de importancia tales como la \textbf{Unidad de Control}, \ojo{PC}{el contador de programa (PC o \PC)}, \ojo{IR}{el registro de instrucción (IR - \textit{Instruction Register})}, \ojo{Registros}{ otros registros de uso específico y general} y la \ojo{ALU}{Unidad Aritmético-Lógica (ALU)}.\\
 
-La \UC\ dirige el ciclo de ejecución de cada instrucción, pidiendo la lectura de celdas de memoria donde esta alojada la instruccion, decodificando la instruccion y ejecutandola luego en colaboración con los otros componenetes del sistema: si es una operación lógica o aritmetica le ordena a la ALU su ejecución, si es de movimiento de datos colabora con el dispositivo de Entrada/Salida.
+La \UC\ dirige el ciclo de ejecución de cada instrucción, pidiendo la lectura de celdas de memoria donde esta alojada, decodificándola  y ejecutándola luego en colaboración con los otros componentes del sistema: si es una operación lógica o aritmética le ordena a la ALU su ejecución, si es de movimiento de datos colabora con la memoria ó el módulo de Entrada/Salida.\\
 
-PC: El contador de programa (en inglés Program Counter o PC) es un registro que indica la posición de memoria donde estará la siguiente instrucción que debe ejecutarse. Este registro se incrementa luego de cada ciclo de instrucción.
+El contador de programa (en inglés \PC\ o PC) es un registro que indica la posición de memoria donde estará la siguiente instrucción que debe ejecutarse. \ojo{Este registro se incrementa luego de cada ciclo de instrucción}{Luego de completar el ciclo de ejecución de una instrucción, el PC se incrementa en función de la cantidad de celdas que ocupa el código máquina de esta}.\\
 
-IR: Este registro contiene la instrucción actual una vez que la misma es leída de memoria para luego decodificarla y ejecutarla.
+El registro de instrucción contiene \ojo{}{el código máquina de} la instrucción actual una vez que la misma es leída de memoria para luego decodificarla y ejecutarla.\\
 
-Registros: son elementos de una memoria de alta velocidad y poca capacidad que permite guardar y acceder a valores generalmente muy usados, por ejemplo, operandos en operaciones matemáticas. Hay diferentes tipos de registros, algunos pueden guardar tanto datos como direcciones de memoria.
+\ojo{Registros:  son elementos de una memoria de alta velocidad y poca capacidad que permite guardar y acceder a valores generalmente muy usados, por ejemplo, operandos en operaciones matemáticas. Hay diferentes tipos de registros, algunos }{El diseño de cada arquitectura ofrece un conjunto diferente de registros de uso general para ser usados en los programas. Estos registros son elementos de memoria de alta velocidad y poca capacidad que pueden ser utilizados como variables en los programas. Es importante marcar que } pueden guardar tanto datos como direcciones de memoria.\\
 
-ALU: es la unidad aritmético lógica, recibe su nombre de las siglas en inglés de arithmetic logic unit. La ALU es un circuito digital que lleva a cabo operaciones aritméticas (suma, resta, multiplicación, división) y las operaciones lógicas (Negacion, Y, O, O exclusivo), entre dos cadenas binarias que son interpretadas como números. 
+La \ALU, recibe su nombre de las siglas en inglés de \textit{Arithmetic and Logic Unit}. La ALU es un circuito digital que lleva a cabo operaciones aritméticas (suma, resta, multiplicación, división) y las operaciones lógicas \ojo{(Negacion, Y, O, O exclusivo)}{como la negación, disyunción, conjunción, etc.}, entre dos cadenas binarias que son interpretadas como números \ojo{}{o valores lógicos}.\\
 
-Memoria: es un conjunto de celdas numeradas. La numeración de cada celda la identifica inequívocamente por lo cual a esta numeración se le llama direccion. En cada celda de la memoria se pueden almacenar datos o instrucciones en forma de cadenas binarias. La información puede leerse y modificarse. En la memoria es donde se alojan los programas que luego serán ejecutados.
+La memoria es un conjunto de celdas numeradas. La numeración de cada celda la identifica inequívocamente por lo cual a esta numeración se le llama dirección. En cada celda de la memoria se pueden almacenar datos o instrucciones en forma de cadenas binarias y este contenido puede leerse y modificarse. En la memoria es donde se alojan los programas que luego serán ejecutados.\\
 
-Buses: son los encargados de transferir los datos entre los componentes de la computadora.La unidad de control al pedir un contenido de una direccion de memoria lo hace a traves del bus, lo mismo cuando desea escribir en memoria.
+\ojo{Buses: son los encargados de}{El bus de sistema es el encargado de} transferir los datos entre los componentes de la computadora.La unidad de control al pedir un contenido de una dirección de memoria lo hace a través del bus, y similarmente mismo cuando desea escribir en memoria.
 
 \subsection{Ejecución de un programa}
 
@@ -44,10 +44,10 @@ Finalmente al saber de qué instrucción se trata la CPU ejecuta la instrucción
 \section{Arquitecturas Q}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Características generales} \label{caracteristicasQ}
+\subsection{Características generales(susi)} \label{caracteristicasQ}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Repertorio de modos de direccionamiento}
+\subsection{Modos de direccionamiento}
 
 \begin{enumerate}
 
@@ -161,7 +161,7 @@ El efecto del JMP es cambiar el PC (Program Counter) por el dato que esta guarda
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Instrucciones de 1 operando destino}
 
-El formato de instruccion de un operando destino es el siguiente:
+El formato de instrucción de un operando destino es el siguiente:
 
   CodOp   +  Modo origen  +  relleno  +  Origen
 (4 bits)      (6 bits)      (000000)    (16 bits)
@@ -175,7 +175,7 @@ Esta instrucción describe la operación logica "negación" bit a bit en el dato
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Instrucciones sin operandos}
 
-El formato de instruccion sin operandos es el siguiente:
+El formato de instrucción sin operandos es el siguiente:
 
  CodOp     +    relleno 
 (4 bits)     (000000000000)
@@ -191,7 +191,7 @@ El efecto del ret es cambiar el pc por el dato que esta guardado en la celda de 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Instrucciones de salto condicional}
 
-El formato de instruccion de salto condicional es el siguiente es el siguiente:
+El formato de instrucción de salto condicional es el siguiente es el siguiente:
 
  prefijo +   CodOp   +  desplazamiento 
  (1111)     (4 bits)     (8 bits)
@@ -247,9 +247,11 @@ La condición del salto es que el flag \textbf{V} sea 1, es decir si el último 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Versiones de la arquitectura}
+\subsection{Versiones de la arquitectura (SUSI)}
 
-Las versiones de la arquitectura QUARQ estan pensadas para incorporar funcionalidades de manera que la curva de aprendizaje sea adecuada para los alumnos, siendo paulatina e incremental, es decir, cada arquitectura Qi agrega más funcionalidad (ya sean instrucciones nuevas o modos de direccionamiento) a las arquitecturas Qi anteriores.
+Las versiones de la arquitectura Q están pensadas para incorporar funcionalidades de manera que la curva de aprendizaje sea adecuada para los alumnos, siendo paulatina e incremental, es decir, cada arquitectura Qi agrega más funcionalidad (ya sean instrucciones nuevas o modos de direccionamiento) a las arquitecturas Qi anteriores.
+
+\ojo{Incorporar lo que sigue a un gráfico de la estructura en cebolla}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Q1}
@@ -358,5 +360,5 @@ Las versiones de la arquitectura QUARQ estan pensadas para incorporar funcionali
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Estado del arte}
+\section{Estado del arte (Susi)}
 
