--- a/src/main/resources/informe-LaTex/simulador.tex
+++ b/src/main/resources/informe-LaTex/simulador.tex
@@ -69,6 +69,9 @@ El execute ejecuta los efectos de la instrucción y muestra en pantalla los camb
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Tecnología utilizada (tati)}
 
+\begin{itemize}
+
+
 \item  \textbf{Scala}
 Elegimos el lenguaje Scala para realizar el simulador ya que, en la materia llamada Objetos III, lo utilizamos un pequeño lapso de tiempo y creímos que era una buena oportunidad para, en vez de elegir un lenguaje que hayamos utilizado más en la carrera como java, profundizar en la utilización de Scala y aprovechar las ventajas que este ofrecia al combinar el manejo de objetos y las características de un lenguaje funcional.
 
@@ -80,6 +83,8 @@ Se eligio utilizar el entorno de programación Eclipse ya que ambas trabajamos e
 
 \item  \textbf{Git}
 Elegimos git como repositorio externo para sincronizar nuestro codigo ya que promueve el codigo abierto (ACA QUIERO PONER LO DE QUE ESTA AHI ARRIBA Y NO LE CEDEMOS DERECHOS NI NADA  A NADIE PERO NO ME SALE!!!)
+
+\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{ (arq OO)}
