compilacion no funca

--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -1,6 +1,7 @@
 \part{Contexto}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Sobre la materia \orga (susi)}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conceptos importantes}
 
@@ -45,6 +46,8 @@ Finalmente al saber de qué instrucción se trata la CPU ejecuta la instrucción
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Características generales(susi)} \label{caracteristicasQ}
+
+Aqui voy yo!!
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Modos de direccionamiento}
@@ -248,6 +251,7 @@ La condición del salto es que el flag \textbf{V} sea 1, es decir si el último 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Versiones de la arquitectura (SUSI)}
+hacer un grafico copado donde se vea las capas de cebolla
 
 Las versiones de la arquitectura Q están pensadas para incorporar funcionalidades de manera que la curva de aprendizaje sea adecuada para los alumnos, siendo paulatina e incremental, es decir, cada arquitectura Qi agrega más funcionalidad (ya sean instrucciones nuevas o modos de direccionamiento) a las arquitecturas Qi anteriores.
 
@@ -255,6 +259,7 @@ Las versiones de la arquitectura Q están pensadas para incorporar funcionalidad
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Q1}
+
 
 \textbf{Modos de direccionamiento}
 \begin{enumerate}
@@ -362,3 +367,4 @@ Las versiones de la arquitectura Q están pensadas para incorporar funcionalidad
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Estado del arte (Susi)}
 
+Historia de Orga con respecto a los simuladores que se usaron 
